syntax = "proto3";

package KurzSharp.GrpcApi;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service PlaceholderModelProtoService {
  rpc GetPlaceholderModels (google.protobuf.Empty) returns (ProductDtosResponse){
    option (google.api.http) = {
      get: "/grpc/v1/products"
    };
  };

  rpc AddPlaceholderModel (PlaceholderModelDto) returns (ProductDtosResponse){
    option (google.api.http) = {
      post: "/grpc/v1/products"
    };
  };

  rpc DeletePlaceholderModel (PlaceholderModelDto) returns (ProductDtosResponse){
    option (google.api.http) = {
      delete: "/grpc/v1/products"
    };
  };

  rpc UpdatePlaceholderModel (PlaceholderModelDto) returns (ProductDtosResponse){
    option (google.api.http) = {
      put: "/grpc/v1/products"
    };
  };
}

message PlaceholderModelDto {
// Props Placeholder
    string id = 1;
    string name = 2;
    string description = 3;
}

message ProductDtosResponse {
  repeated PlaceholderModelDto ProductDtos = 1;
}